unpackaged/main/default/objects/ETT_Tyre_Rejection_Report__c/ETT_Tyre_Rejection_Report__c.object-meta.xml
<CustomObject>
    <label>Tyre Rejection Report</label>
    <nameField>
        <displayFormat>TRR-{0000}</displayFormat>
        <label>Tyre Rejection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tyre Rejection Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>