unpackaged/main/default/objects/ETT_Tyre_Rejection_Report__c/fields/Collection_Card__c.field-meta.xml
<CustomField>
    <fullName>Collection_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Card</label>
    <referenceTo>ETT_Collection_Card__c</referenceTo>
    <relationshipLabel>Tyre Rejection Reports</relationshipLabel>
    <relationshipName>ETT_Tyre_Rejection_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>