unpackaged/main/default/objects/ETT_Tyre_Rejection_Report__c/fields/ETT_Brand__c.field-meta.xml
<CustomField>
    <fullName>ETT_Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>ETT_Brand_Master__c</referenceTo>
    <relationshipLabel>Tyre Rejection Reports</relationshipLabel>
    <relationshipName>Tyre_Rejection_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>