unpackaged/main/default/objects/ETT_Tyre_Rejection_Report__c/fields/ETT_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>ETT_Brand_Name__c</fullName>
    <formula>ETT_Brand__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Name</label>
    <type>Text</type>
</CustomField>