unpackaged/main/default/objects/ETT_Tyre_Rejection_Report__c/fields/ETT_Check_out__c.field-meta.xml
<CustomField>
    <fullName>ETT_Check_out__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Check-Out</label>
    <type>DateTime</type>
</CustomField>