unpackaged/main/default/objects/ETT_Tyre_Rejection_Report__c/fields/ETT_Collection_Card__c.field-meta.xml
<CustomField>
    <fullName>ETT_Collection_Card__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Collection Card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>