unpackaged/main/default/objects/ETT_Tyre_Rejection_Report__c/fields/ETT_Country_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>ETT_Country_of_Origin__c</fullName>
    <formula>ETT_Country__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country of Origin</label>
    <type>Text</type>
</CustomField>