unpackaged/main/default/objects/ETT_Tyre_Rejection_Report__c/fields/ETT_Inspector_Name__c.field-meta.xml
<CustomField>
    <fullName>ETT_Inspector_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspector Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tyre_Rejection_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>