unpackaged/main/default/objects/ETT_Tyre_Rejection_Report__c/fields/ETT_Location__c.field-meta.xml
<CustomField>
    <fullName>ETT_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>