unpackaged/main/default/objects/ETT_Tyre_Rejection_Report__c/fields/ETT_Mobile__c.field-meta.xml
<CustomField>
    <fullName>ETT_Mobile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>