unpackaged/main/default/objects/ETT_Tyre_Rejection_Report__c/fields/ETT_Rejected_Tyre_Images__c.field-meta.xml
<CustomField>
    <fullName>ETT_Rejected_Tyre_Images__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rejected Tyre Images</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>