unpackaged/main/default/objects/ETT_Tyre_Rejection_Report__c/fields/ETT_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>ETT_Rejection_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rejection Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>