unpackaged/main/default/objects/ETT_Tyre_Rejection_Report__c/fields/ETT_Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>ETT_Service_Appointment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Appointment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>