unpackaged/main/default/objects/ETT_Tyre_Rejection_Report__c/fields/ETT_Tyre_Size__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Size__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tyre Size</label>
    <referenceTo>ETT_Tyre_Size_Master__c</referenceTo>
    <relationshipLabel>Tyre Rejection Reports</relationshipLabel>
    <relationshipName>Tyre_Rejection_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>