unpackaged/main/default/objects/ETT_Tyre_Rejection_Report__c/fields/ETT_Tyre_Size_Name__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Size_Name__c</fullName>
    <formula>ETT_Tyre_Size__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ETT Tyre Size Name</label>
    <type>Text</type>
</CustomField>