unpackaged/main/default/objects/ETT_Tyre_Rejection_Report__c/recordTypes/Tyre_Cash_Supplier.recordType-meta.xml
<RecordType>
    <fullName>Tyre_Cash_Supplier</fullName>
    <active>true</active>
    <label>Tyre - Cash Supplier</label>
</RecordType>