unpackaged/main/default/objects/ETT_Tyre_Rejection_Report__c/recordTypes/Tyre_Credit_Supplier.recordType-meta.xml
<RecordType>
    <fullName>Tyre_Credit_Supplier</fullName>
    <active>true</active>
    <label>Tyre - Credit Supplier</label>
</RecordType>