unpackaged/main/default/objects/ETT_Tyre_Rejection_Report__c/recordTypes/Tyre_Refurbished_Services.recordType-meta.xml
<RecordType>
    <fullName>Tyre_Refurbished_Services</fullName>
    <active>true</active>
    <label>Tyre - Refurbished Services</label>
</RecordType>