unpackaged/main/default/objects/ETT_Tyre_Rejection_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ETT_Check_In__c</columns>
    <columns>ETT_Check_out__c</columns>
    <columns>ETT_Collection_Card__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ETT_Brand_Name__c</columns>
    <columns>ETT_Brand__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>